...
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object ReportBugScreenTestTags {
    const val ROOT_COLUMN = "ReportBugScreen_RootColumn"
    const val TITLE_TEXT_FIELD = "ReportBugScreen_TitleTextField"
    const val DESCRIPTION_TEXT_FIELD = "ReportBugScreen_DescriptionTextField"
    const val SUBMIT_EMAIL_BUTTON = "ReportBugScreen_SubmitEmailButton"
    const val SUBMIT_GITHUB_BUTTON = "ReportBugScreen_SubmitGitHubButton"
}

