/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object UpdateScreenTestTags {
    const val ROOT_COLUMN = "update_screen_root_column"
    const val SHOW_UPDATE_DIALOG_SWITCH = "update_screen_show_update_dialog_switch"
    const val JOIN_BETA_RELEASE_SWITCH = "update_screen_join_beta_release_switch"
    const val CHECK_FOR_UPDATE_BUTTON = "update_screen_check_for_update_button"
}
