/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object AboutScreenTestTags {
    const val SCREEN_ROOT = "about:screen_root"

    const val APP_ICON = "about:app_icon"
    const val APP_NAME = "about:app_name"
    const val APP_DESCRIPTION = "about:app_description"

    const val VERSION_NAME_LABEL = "about:version_name_label"
    const val VERSION_NAME_VALUE = "about:version_name_value"

    const val VERSION_CODE_LABEL = "about:version_code_label"
    const val VERSION_CODE_VALUE = "about:version_code_value"

    const val DEVELOPED_BY_LABEL = "about:developed_by_label"
    const val DEVELOPER_NAME = "about:developer_name"

    const val CONTACT_US_LABEL = "about:contact_us_label"
    const val EMAIL_LINK = "about:email_link"

    const val PRIVACY_POLICY_BUTTON = "about:privacy_policy_button"
    const val TERMS_AND_CONDITIONS_BUTTON = "about:terms_and_conditions_button"
}
